* Warning: For a seamless upgrade, upgrade to version 5        *
*          of the decoder before upgrading to version 5 of the *
*          encoder!                                            *
****************************************************************
5.000_000 Tue Aug 30, 2022
    * Support quadmath builds with FLOAT_128 tag type.

4.025 Thr Jul 28, 2022
    * Release with build fixes for threaded perls and MANIFEST
      update. Oops.

4.024 Wed Jul 27, 2022
    * Total rework of how THAW is invoked to resolve issues with
      frozen representations containing blessed objects.


4.023 Sun Feb 20, 2022
    * Make it possible to upgrade with passing tests when using
      Sereal::Decoder 4.015 - 4.019 on threaded debugging perls.

      IF YOU USE THREADED PERLS YOU ARE STRONGLY ADVISED TO UPDATE
      TO THIS VERSION OR LATER. *UPGRADE THE DECODER IMMEDIATELY.*

4.022 Sat Feb 19, 2022
4.021 Fri Feb 18, 2022
    * Early but incomplete versions of 4.023, skip these releases.

4.020 Thurs Feb 17, 2022
    * Fix "panic: free from wrong pool" errors on threaded builds.
      This error is only visible on DEBUGGING perls however it exists
      regardless. If you are using a threaded build upgrade to this!
      Thanks to Andreas J. Koenig for finding the bug, and Nicholas Clark
      for suggesting valgrind to debug and fix it.

4.019 Mon Feb 7, 2022
    * Fix build issue with latest perl - Thanks to Nicholas Clark
    * Update zstd to 1.5.1

4.018 Thurs Aug 3, 2020
    * Fix issue with gcc 10 with snappy compression.

4.017 Thurs July 9, 2020
    * The build fixes in 4.016 didn't work correctly, this should fix them.

4.016 Thurs July 9, 2020
    * Fix some dependency issues in build process

4.015 Weds  July 8, 2020
    * Build fixes (missing dependency)
    * Hardening against corrupted data
    * New thresholds to manage decoding process

4.014 Thurs June 11, 2020
    * Fix build issue on non-win32 platforms.
    * Update zstd to 1.4.5
